# randstalker-archipelago

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build_win_vs2022_release.bat  garb.txt
extlibs/apclientpp/: apclient.hpp
extlibs/imgui/: imgui-SFML.h
extlibs/landstalker_lib/landstalker_lib/constants/: item_codes.hpp
extlibs/landstalker_lib/landstalker_lib/model/: item.hpp  world.cpp  world.hpp
extlibs/landstalker_lib/landstalker_lib/tools/: flag.hpp~
extlibs/openssl/lib/: libcrypto.lib
extlibs/openssl/openssl/: cmp.h  opensslv.h
extlibs/zlib/lib/: zlibstatic.lib
src/: archipelago_interface.cpp  archipelago_interface.hpp  client.hpp  emulator_interface.hpp  game_state.cpp  game_state.hpp  location.cpp  location.hpp  logger.cpp  logger.hpp  main.cpp  preset_builder.cpp  preset_builder.hpp  randstalker_invoker.cpp  randstalker_invoker.hpp  retroarch_interface.cpp  retroarch_interface.hpp  retroarch_mem_interface.cpp  retroarch_mem_interface.hpp  trackable_item.cpp  trackable_item.hpp  trackable_region.cpp  trackable_region.hpp  tracker_config.cpp  tracker_config.hpp  user_interface.cpp  user_interface.hpp
src/data/: item_source.json  locations.json  trackable_items.json  trackable_regions.json
src/emulator_interfaces/: bizhawk_mem_interface.cpp  bizhawk_mem_interface.hpp  retroarch_mem_interface.cpp
src/multiworld_interfaces/: archipelago_interface.cpp  archipelago_interface.hpp  multiworld_interface.hpp  offline_play_interface.hpp
